# EasyLog

./: CHANGELOG.md  EasyLog API 文档.md  README.md  pyproject.toml
doc/: releaseguide.md
easylogz/: __init__.py  logger_module.py
test/: example.py  test02.py  test_easylog.py
